wp-content/themes/snoobe/assets/less/partials/blog.less
//
// Blog
// --------------------------------------------------

.entry-title {
	a {
		color: #484747;
		font-size: 24px;
	}
}

.blog-area {
	position: relative;
	overflow: hidden;
	height: 1300px;
	padding-top: 85px;

	.main-blog-content {
		position: relative;
		padding-right: 250px;
		padding-left: 60px;
		width: 100%;
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
	}
	.main-blog-sidebar {
		position: absolute;
		right: 0;
		top: 0;
		padding-top: 85px;
		width: 230px;

		h3 {
			color: #484747;
			font-size: 16px;
		}
		.textwidget {
			color: #a3a2a2;
			font-size: 14px;
		}
		.twiget-feed {
			.tweet-wrap {
				padding-left: 30px;

				li {
					.twiget-tweet {
						img {
							position: absolute;
							left: 0;
							width: 20px;
							height: 20px;
						}
						p {
							color: #484747;
							font-size: 14px;
						}
						a {
							color: #7dbd22;
							font-size: 14px;
						}
					}
					.twiget-meta {
						.timestamp {
							a {
								color: #a3a2a2;
								font-size: 12px;
							}
						}
						.client {
							display: none;
						}
					}
				}
			}
			.tweet-bio, .twigetfollow {
				display: none;
			}
		}
	}
}

.widget_categories {
	ul {
		padding-left: 0;
		list-style: none;

		li {
			padding: 12px 0px 12px 16px;
			border-bottom: 2px solid #f8f8f8;
			border-left: 3px solid #fff;

			a {
				color: #a3a2a2;
				font-size: 14px;
			}
			&.active, &:hover, &:active {
				border-left: 3px solid #7dbd22;

				a {
					color: #7dbd22;
					text-decoration: none;
				}
			}
		}
	}
}

.tagcloud {
	a {
		display: inline-block;
		margin-bottom: 10px;
		margin-right: 10px;
		padding: 10px;
		background: #f7f7f7;
		color: #a3a2a2;
		font-size: 14px;

		&:hover, &:active, &.active {
			background: #7dbd22;
			color: #fff;
			text-decoration: none;
		}
	}
}

.attachment-post-thumbnail.wp-post-image {
	width: 100%;
	height: auto;
}

.post-time {
	display: block;
	position: absolute;
	padding-top: 50px;
	width: 50px;
	height: 99px;
	line-height: 20px;
	top: 0;
	left: 0;
	background: url(../img/time-background.png) no-repeat center;
	text-align: center;
	color: #fff;
	font-size: 12px;

	b {
		display: block;
		font-size: 24px;
	}
}

.entry-title {
	margin-bottom: 0px;
}
.post-data {
	margin-bottom: 25px;

	span {
		display: inline-block;
		color: #a3a2a2;
		font-size: 12px;
		height: 12px;
		line-height: 12px;

		a {
			color: #484747;
			font-size: 12px;
		}
		&.comment-number {
			padding: 0 10px;
			border-left: 1px solid #a3a2a2;
			border-right: 1px solid #a3a2a2;

			a {
				color: #7dbd22;
				font-size: 12px;
			}
		}
	}
}
.entry-summary {
	p {
		color: #a3a2a2;
		font-size: 14px;
	}
}

